Corrected the alignment of some text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,7 @@ a:hover {
 	margin-top: 3px;
 }
 
+/* Media Query relating to navbar width breakpoints: 767px */
 @media only screen and (max-width: 767px) {
   .navbar-default .navbar-collapse {
     background-color: transparent;
@@ -123,6 +124,11 @@ a:hover {
 	text-align: left;
 }
 
+.section-content-inner h2{
+	text-align: center;
+}
+
+/* Media Query relating to navbar width breakpoints: 1074px */
 @media only screen and (max-width: 1074px){
 	.section-content-inner {
 		padding: 20px;
@@ -130,15 +136,16 @@ a:hover {
 }
 
 .section-img-container {
-	min-width: 960px;
-	height: 360px; /*Default until resized by skrollr*/
-	opacity: 1;
+	min-width: 768px;
+    height: 600px;
 }
 
-@media only screen and (min-width: 768px) {
+/* Media Query relating to navbar width breakpoints: 767px */
+@media only screen and (max-width: 767px) {
 	.section-img-container {
-        min-width: 768px;
-        height: 600px;
+        min-width: 960px;
+		height: 360px; /*Default until resized by skrollr*/
+		opacity: 1;
     }
 }
 
@@ -171,6 +178,7 @@ a:hover {
 	text-align: center;
 }
 
+/* Media Query relating to navbar width breakpoints: 767px */
 @media only screen and (max-width: 767px){
 	.scrolldown-icon-container {
 		display: none;
@@ -294,9 +302,14 @@ a:hover {
 	margin-top: 40px;
 }
 
+/* Media Query relating to navbar width breakpoints: 1074px */
 @media only screen and (max-width: 1074px){
 	.project-content h6 {
 		font-size: 18px;
+	}
+
+	.project-content {
+		text-align: left !important;
 	}
 
 	.project-img {
@@ -328,6 +341,8 @@ a:hover {
 #parentteacher .project-img {
 	background-image:url('../img/parentteacher.jpg');
 }
+/* Media Query relating to navbar width breakpoints: 1074px */
+/* Styles for centering the image properly when zoomed in. Configure these every time you change the image!!! */
 @media only screen and (max-width: 1074px) {
 	#parentteacher .project-img {
 		background-position: top center;
@@ -340,6 +355,8 @@ a:hover {
 #chatroom .project-img {
 	background-image:url('../img/chatroom.jpg');
 }
+/* Media Query relating to navbar width breakpoints: 1074px */
+/* Styles for centering the image properly when zoomed in. Configure these every time you change the image!!! */
 @media only screen and (max-width: 1074px) {
 	#chatroom .project-img {
 		background-position: 10% 0%;
